force-app/main/default/objects/custom_create41__c/custom_create41__c.object-meta.xml
<CustomObject>
    <label>Custom created object41</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects41</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>