force-app/main/default/objects/custom_create41__c/fields/custom_create_41field578__c.field-meta.xml
<CustomField>
    <fullName>custom_create_41field578__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 41field578</label>
    <type>Checkbox</type>
</CustomField>